[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Textures/Icons/goblin.png" type="Texture" id=1]
[ext_resource path="res://Scripts/menuButtons.gd" type="Script" id=2]
[ext_resource path="res://Assets/Textures/Icons/menu_background.jpg" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/DAGGERSQUARE.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Textures/Icons/troll_icon.png" type="Texture" id=5]
[ext_resource path="res://Assets/Textures/Icons/zombie_icon.png" type="Texture" id=6]
[ext_resource path="res://Assets/Textures/Icons/golem_icon.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0.0980392, 0.376471, 0.396078, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 56
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="settingsScreen" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 800.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuButton" type="Button" parent="."]
margin_left = 330.0
margin_top = 700.0
margin_right = 950.0
margin_bottom = 784.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.631373, 0, 0, 1 )
enabled_focus_mode = 0
text = "Back to main menu"
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Armon" type="Control" parent="."]
margin_right = 640.0
margin_bottom = 350.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nameArmon" type="Label" parent="Armon"]
margin_right = 640.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
text = "Armon Hakimi"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="goblinIcon" type="TextureRect" parent="Armon"]
margin_left = 30.0
margin_top = 60.0
margin_right = 1532.0
margin_bottom = 1980.0
rect_scale = Vector2( 0.148681, 0.148681 )
texture = ExtResource( 1 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="contributionsArmon" type="Label" parent="Armon"]
margin_left = 250.0
margin_top = 80.0
margin_right = 640.0
margin_bottom = 350.0
custom_fonts/font = SubResource( 3 )
text = "-Creative director
-Part time genios
-Menus
-Fkn around"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ludde" type="Control" parent="."]
margin_top = 350.0
margin_right = 640.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nameLudde" type="Label" parent="Ludde"]
margin_right = 640.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
text = "Ludvig Vik Løite"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="goblinIcon" type="TextureRect" parent="Ludde"]
margin_left = 59.9385
margin_top = 60.0
margin_right = 848.938
margin_bottom = 1340.0
rect_scale = Vector2( 0.191299, 0.191299 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="contributionsLudde" type="Label" parent="Ludde"]
margin_left = 250.0
margin_top = 80.0
margin_right = 640.0
margin_bottom = 350.0
custom_fonts/font = SubResource( 3 )
text = "-Chief exec.
-Visionary
-Sound FX
-\"Big daddy\""
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Støle" type="Control" parent="."]
margin_left = 640.0
margin_right = 1280.0
margin_bottom = 350.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nameStian" type="Label" parent="Støle"]
margin_right = 640.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
text = "Stian Mjelde Jakobsen"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="goblinIcon" type="TextureRect" parent="Støle"]
margin_left = 16.379
margin_top = 44.881
margin_right = 417.379
margin_bottom = 667.881
rect_scale = Vector2( 0.480452, 0.480452 )
texture = ExtResource( 5 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="contributionsStøle" type="Label" parent="Støle"]
margin_left = 250.0
margin_top = 80.0
margin_right = 640.0
margin_bottom = 350.0
custom_fonts/font = SubResource( 3 )
text = "-Lead game dev
-Physics
-Foreign Affairs
-R&D"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bambam" type="Control" parent="."]
margin_left = 640.0
margin_top = 350.0
margin_right = 1280.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nameBambam" type="Label" parent="Bambam"]
margin_right = 640.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
text = "Tore Fossland"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="goblinIcon" type="TextureRect" parent="Bambam"]
margin_left = -92.2122
margin_top = 20.9425
margin_right = 511.788
margin_bottom = 433.943
rect_scale = Vector2( 0.676472, 0.782429 )
texture = ExtResource( 7 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="contributionsBambam" type="Label" parent="Bambam"]
margin_left = 250.0
margin_top = 80.0
margin_right = 640.0
margin_bottom = 350.0
custom_fonts/font = SubResource( 3 )
text = "-Really stronk
-Marketing
-Car design
-idunno anymore"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="menuButton" to="menuButton" method="_on_gotoMenu_pressed"]
