[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Textures/Icons/menu_background.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/font_for_interface.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/DAGGERSQUARE.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/menuButtons.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0.0980392, 0.376471, 0.396078, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 2
outline_color = Color( 0.0980392, 0.376471, 0.396078, 1 )
font_data = ExtResource( 3 )

[node name="GameOverAILost" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titleBackground" type="TextureRect" parent="."]
margin_left = 0.937378
margin_top = 0.937382
margin_right = 1280.94
margin_bottom = 800.938
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonsNode" type="Node2D" parent="."]
position = Vector2( 0, 550 )

[node name="menuButton" type="Button" parent="buttonsNode"]
margin_left = 330.0
margin_right = 950.0
margin_bottom = 100.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.631373, 0, 0, 1 )
enabled_focus_mode = 0
text = "Back to main menu"
flat = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quitButton" type="Button" parent="buttonsNode"]
margin_left = 470.0
margin_top = 100.0
margin_right = 810.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( -556.287, -278.72 )
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.631373, 0, 0, 1 )
enabled_focus_mode = 0
text = "Ragequit"
flat = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 381.513
margin_top = 263.403
margin_right = 989.513
margin_bottom = 312.403
custom_fonts/font = ExtResource( 2 )
text = "Congratz you beat the shitty AI"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="buttonsNode/menuButton" to="buttonsNode/menuButton" method="_on_gotoMenu_pressed"]
[connection signal="pressed" from="buttonsNode/quitButton" to="buttonsNode/quitButton" method="_on_quitButton_pressed"]
