[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Textures/Icons/menu_background.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/DAGGERSQUARE.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/menuButtons.gd" type="Script" id=3]
[ext_resource path="res://Assets/Textures/Icons/snow_icon.jpg" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/Icons/desert_icon.jpg" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0.996078, 1, 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 0.529412, 0, 1 )

[sub_resource type="DynamicFont" id=5]
size = 64
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 64
outline_size = 2
outline_color = Color( 0.0980392, 0.376471, 0.396078, 1 )
font_data = ExtResource( 2 )

[node name="levelSelectScreen" type="Control"]
margin_right = 45.0
margin_bottom = 31.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titleBackground" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 800.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="snowButton" type="Button" parent="."]
margin_left = 20.0
margin_top = 50.0
margin_right = 630.0
margin_bottom = 420.0
custom_styles/hover = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="snowIcon" type="TextureRect" parent="snowButton"]
margin_left = 5.0
margin_top = 5.0
margin_right = 605.0
margin_bottom = 365.0
texture = ExtResource( 4 )
expand = true

[node name="snowLabel" type="Label" parent="snowButton"]
margin_top = 370.0
margin_right = 600.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0.996078, 1, 1 )
text = "Frosty freestyle"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="desertButton" type="Button" parent="."]
margin_left = 650.0
margin_top = 50.0
margin_right = 1260.0
margin_bottom = 420.0
custom_styles/hover = SubResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="desertIcon" type="TextureRect" parent="desertButton"]
margin_left = 5.0
margin_top = 5.0
margin_right = 605.0
margin_bottom = 365.0
texture = ExtResource( 5 )
expand = true

[node name="desertLabel" type="Label" parent="desertButton"]
margin_top = 370.0
margin_right = 600.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0.529412, 0, 1 )
text = "Death by desert"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuButton" type="Button" parent="."]
margin_left = 330.0
margin_top = 650.0
margin_right = 950.0
margin_bottom = 734.0
focus_mode = 0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.631373, 0, 0, 1 )
enabled_focus_mode = 0
text = "Back to main menu"
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="snowButton" to="snowButton" method="_on_snowButton_pressed"]
[connection signal="pressed" from="desertButton" to="menuButton" method="_on_desertButton_pressed"]
[connection signal="pressed" from="menuButton" to="menuButton" method="_on_gotoMenu_pressed"]
