[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Textures/Icons/crappcar_icon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/Icons/menu_background.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/Textures/Icons/racecar_icon2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/hollowpoint3dital.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/horizontalSliders.gd" type="Script" id=6]
[ext_resource path="res://Scripts/menuButtons.gd" type="Script" id=7]
[ext_resource path="res://Assets/Fonts/DAGGERSQUARE.otf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0.0980392, 0.376471, 0.396078, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 62
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 62
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 168
outline_size = 2
outline_color = Color( 0, 0.6, 1, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 64
outline_size = 2
outline_color = Color( 0.639216, 1, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 64
outline_size = 2
outline_color = Color( 0.639216, 1, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=7]
size = 64
outline_size = 2
outline_color = Color( 0.0980392, 0.376471, 0.396078, 1 )
font_data = ExtResource( 8 )

[node name="carSelecScreen" type="Control"]
margin_right = 45.0
margin_bottom = 31.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titleBackground" type="TextureRect" parent="."]
margin_left = -1.38477
margin_top = 3.46191
margin_right = 1278.62
margin_bottom = 803.462
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuButton" type="Button" parent="."]
margin_left = 330.0
margin_top = 650.0
margin_right = 949.0
margin_bottom = 734.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.631373, 0, 0, 1 )
enabled_focus_mode = 0
text = "Back to main menu"
flat = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="car1Node" type="Node2D" parent="."]
position = Vector2( 44.0497, -24.0271 )
rotation = 0.248117

[node name="racecarIcon" type="TextureRect" parent="car1Node"]
margin_top = -101.0
margin_right = 600.0
margin_bottom = 299.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="racecarLabel" type="Label" parent="car1Node"]
margin_top = 238.0
margin_right = 600.0
margin_bottom = 313.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Racecar"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="car2Node" type="Node2D" parent="."]
position = Vector2( 627.375, 80.0904 )
rotation = -0.359371

[node name="car2Icon" type="TextureRect" parent="car2Node"]
margin_right = 600.0
margin_bottom = 370.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="car2Label" type="Label" parent="car2Node"]
margin_top = 312.0
margin_right = 600.0
margin_bottom = 387.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.552941, 0, 1 )
text = "AI"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VS" type="Label" parent="."]
margin_left = 562.715
margin_top = 265.068
margin_right = 778.715
margin_bottom = 436.068
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "VS."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lapsBar" type="HScrollBar" parent="."]
margin_left = 340.0
margin_top = 580.0
margin_right = 580.0
margin_bottom = 620.0
min_value = 1.0
max_value = 10.0
value = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lapsLabel" type="Label" parent="lapsBar"]
margin_top = -80.0
margin_right = 150.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Laps"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lapsNumber" type="Label" parent="lapsBar"]
margin_left = 170.0
margin_top = -80.0
margin_right = 228.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startRaceButton" type="Button" parent="."]
margin_left = 650.0
margin_top = 530.0
margin_right = 1019.0
margin_bottom = 614.0
focus_mode = 0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.631373, 0, 0, 1 )
enabled_focus_mode = 0
text = "Start game"
flat = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="menuButton" to="menuButton" method="_on_gotoMenu_pressed"]
[connection signal="value_changed" from="lapsBar" to="lapsBar" method="_on_lapsBar_value_changed"]
[connection signal="pressed" from="startRaceButton" to="startRaceButton" method="_on_startAIRace_pressed"]
